Реализован парсинг категорий

--- a/FreeParser/appsettings.json
+++ b/FreeParser/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "ConnectionStringDB": "Server=tcp:freeparser.database.windows.net,1433;Initial Catalog=FreeParserDB;Persist Security Info=False;User ID=NakiDenchik;Password=Qazwsxedc24680;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "ConnectionStringDB": "Data Source=DESKTOP-8OHJ49P;Initial Catalog=FreeParser;Integrated Security=True",
     "TestConnectionStringDB": "Data Source=DESKTOP-8OHJ49P;Initial Catalog=FreeParser;Integrated Security=True"
 
   }
